Updating nationality colors GridGame background